samples/_failures_safe/1761318568_dd6533_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8e6b799.c: In function ‘main’:
./samples/SAFE/__tmp_f8e6b799.c:146:12: error: missing terminating " character
  146 |     printf("%-20s %
      |            ^~~~~~~~
./samples/SAFE/__tmp_f8e6b799.c:146:5: error: expected expression at end of input
  146 |     printf("%-20s %
      |     ^~~~~~
./samples/SAFE/__tmp_f8e6b799.c:146:5: error: expected declaration or statement at end of input
